meal-ui/src/styles/local/partials/3-sequences/3-sequences.scss
@import 'sidebar-fade-in.scss';
@import 'fades.scss';

body {
	--sequence-slow: 1.6s;
	--sequence-fast: 0.4s;
}

