little slower, avoids blurring

--- a/meal-ui/src/styles/local/partials/3-sequences/3-sequences.scss
+++ b/meal-ui/src/styles/local/partials/3-sequences/3-sequences.scss
@@ -3,5 +3,5 @@
 
 body {
 	--sequence-slow: 1.6s;
-	--sequence-fast: 0.4s;
+	--sequence-fast: 0.5s;
 }
